Fixed spacing on faux border

--- a/_sass/_cta.sass
+++ b/_sass/_cta.sass
@@ -34,7 +34,7 @@
     height: ms(8)
     left: 0
     right: 0
-    bottom: 99.9%
+    bottom: 99.8%
     z-index: 1
     background: $brand
     -webkit-clip-path: polygon(50% 97%, 100% 0, 100% 3%, 50% 100%, 0 3%, 0 0)
